[build-system]
requires = [
   "attrs",
   # >= 1.0.0b1 for Qt6 support
   "aqtinstall >= 1.0.0b1",
   # != 0.10.0 for https://github.com/miurahr/py7zr/issues/252
   "py7zr != 0.10.0",
   "importlib-metadata",
   "hyperlink",
   "macholib",
   "msvc-runtime; sys_platform == 'win32'",
   "pip",
   "pylddwrap",
   "requests",
   "setuptools",
   "versioneer-518 == 0.18",
   "wheel",
]
build-backend = "setuptools.build_meta"
